css/kitty.css
body {
  color: black;
  background: black;
}

h1 {
  border-bottom: 2px solid rgba(233, 30, 99, 0.58);
  box-shadow: inset 0 -10px 0 rgba(233, 30, 99, 0.58);
  text-decoration: none;
  color: black;
  width: 205px;
}

p {
  font-family: monospace;
  font-size: 1rem;
}

main {
  padding: 20px;
  background: white;
  margin: 50px auto;
  max-width: 430px;
}

button {
  background: #f27ca4;
  color: white;
  border: 0;
  border-radius: 5px;
  font-size: 15px;
  padding: 9px 50px;
  margin: 0px auto;
  display: block;
}


.overlay {
  background: rgba(255, 255, 255, 0.25);
  width: 100%;
  position: absolute;
  height: 100%;
}

#resetGame.active {
  display: block;
}

#resetGame {
  display: none;
}

